# TrafficMonitor-Codex-Plugin

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
docs/: data-format.md
docs/superpowers/plans/: 2026-07-01-trafficmonitor-seven-optimizations.md
scripts/: collect_codex_usage.py  update_codex_usage.ps1
src/: CodexUsagePlugin.cpp
tests/: test_ci_workflow.py  test_cpp_smoke_target.py  test_options_dialog_layout.py  test_refresh_interval_feature.py  test_remaining_quota_display.py  test_reset_credits.py  test_reset_display.py  test_rollout_token_breakdown.py  test_session_rate_limits.py
tests/cpp/: json_parser_smoke.cpp
tools/: build.ps1
